Get owner ids only one time CLM-30565 CLM-31081 (#11832)